test/compile_failure/29_incompatible_return.c
// EXPECT-ERRORS: 1
// EXPECT: return type mismatch
int *get_pointer() {
    return 42;
}
